--- a/TIPE/TIPE.vcxproj.filters
+++ b/TIPE/TIPE.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="dijkstra.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="update_functions.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="metro.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
