--- a/TIPE/TIPE.vcxproj
+++ b/TIPE/TIPE.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="metro.h" />
+    <ClInclude Include="metro_v.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
