--- a/TIPE/TIPE.vcxproj.filters
+++ b/TIPE/TIPE.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="functions.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="get_paths.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="metro.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="metro_v.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
